--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <section>
      
     <article>
-      <img src="images/image-qr-code.png" alt="" width="100%" >
+      <img src="images/image-qr-code.png" alt="" >
       <h1>Improve your front-end skills by building projects</h1>
       <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level.</p>
     </article>
